jorge_andrada/session-01/exercise-01/mariadb-deployment.yaml
# Deployment MariaDB

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mariadb-deployment
  namespace: exercise-01
  labels:
    app: wordpress
    type: database
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        type: database
    spec:
      containers:
        - name: mariadb
          image: bitnami/mariadb:10.1
          ports:
            - containerPort: 3306
              name: puerto-db
