jorge_andrada/session-01/exercise-01/wordpress-deployment.yaml
# Deployment wordpress

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise-01
  labels:
    app: wordpress
    tier: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
        - name: wordpress
          image: bitnami/wordpress:4.9.4
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
