jorge_andrada/session-01/exercise-01/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: exercise-01
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
  labels:
    app: wordpress
    tier: frontend
  # non-www to www redirection
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: wordpress-exercise-01.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-service
          servicePort: http-sv-port
